--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,6 @@
 *.jar
 *.war
 *.ear
-
+#test only,thanks
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
