--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,5 @@ theme: jekyll-theme-cayman
 github:
     zip_url: https://github.com/alibaba/dubbo/zipball/master
     tar_url: https://github.com/alibaba/dubbo/tarball/master
+    repository_url: https://github.com/alibaba/dubbo
+    is_project_page: true
