--- a/package.json
+++ b/package.json
@@ -20,20 +20,22 @@
     "babel-preset-stage-0": "6.22.0",
     "babel-register": "^6.26.0",
     "css-loader": "0.6.12",
+    "cssnano": "^4.1.10",
     "eslint": "^3.6.0",
     "eslint-config-ali": "^1.0.0",
     "eslint-plugin-import": "*",
     "eslint-plugin-react": "*",
     "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^3.0.1",
     "gulp": "3.9.1",
     "gulp-util": "2.2.20",
     "json-loader": "*",
     "node-libs-browser": "2.0.0",
     "node-sass": "^4.7.2",
     "opn": "^5.3.0",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
     "raw-loader": "^0.5.1",
-    "react": "15.4.2",
-    "react-dom": "15.4.2",
+    "resolve-url-loader": "^3.0.1",
     "sass-loader": "6.0.2",
     "style-loader": "0.6.5",
     "webpack": "^2.6.1",
