--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "gulp",
-    "build": "gulp build"
+    "start": "node ./node_modules/.bin/docsite start",
+    "build": "node ./node_modules/.bin/docsite build"
   },
   "devDependencies": {
     "babel-core": "6.23.1",
@@ -39,7 +39,8 @@
     "sass-loader": "6.0.2",
     "style-loader": "0.6.5",
     "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": "^2.4.5",
+    "docsite": "^1.3.9"
   },
   "dependencies": {
     "classnames": "^2.2.5",
