--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "babel-register": "^6.26.0",
     "css-loader": "0.6.12",
     "cssnano": "^4.1.10",
+    "docsite": "^1.3.9",
     "eslint": "^3.6.0",
     "eslint-config-ali": "^1.0.0",
     "eslint-plugin-import": "*",
     "eslint-plugin-react": "*",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^3.0.1",
-    "gulp": "3.9.1",
+    "gulp": "^4.0.2",
     "gulp-util": "2.2.20",
     "json-loader": "*",
     "node-libs-browser": "2.0.0",
@@ -39,8 +40,7 @@
     "sass-loader": "6.0.2",
     "style-loader": "0.6.5",
     "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5",
-    "docsite": "^1.3.9"
+    "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
     "antd": "^3.16.6",
