--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "babel-register": "^6.26.0",
     "css-loader": "0.6.12",
     "cssnano": "^4.1.10",
+    "docsite": "^1.3.9",
     "eslint": "^3.6.0",
     "eslint-config-ali": "^1.0.0",
     "eslint-plugin-import": "*",
     "eslint-plugin-react": "*",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^3.0.1",
-    "gulp": "3.9.1",
+    "gulp": "^3.9.0",
     "gulp-util": "2.2.20",
     "json-loader": "*",
     "node-libs-browser": "2.0.0",
@@ -39,15 +40,16 @@
     "sass-loader": "6.0.2",
     "style-loader": "0.6.5",
     "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5",
-    "docsite": "^1.3.9"
+    "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
+    "antd": "^3.16.6",
     "classnames": "^2.2.5",
     "core-decorators": "^0.20.0",
+    "enquire.js": "^2.1.6",
     "js-cookie": "^2.2.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-scroll": "^1.7.9",
     "react-tilt": "^0.1.4",
     "whatwg-fetch": "^2.0.4"
