--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,10 +1,9 @@
 name: CI
 
-on: [push,pull_request]
+on: [pull_request]
 
 jobs:
-  build:
-
+  Build:
     runs-on: ubuntu-latest
 
     strategy:
@@ -17,7 +16,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: npm install and build
+    - name: Npm install and build
       run: |
         npm install
         npm run build --if-present
