--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,10 +11,10 @@ jobs:
     steps:
     - uses: actions/checkout@master
 
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js 10.x
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 10.x
     - name: Build
       run: |
         npm install && npm run build && mkdir deploy-dist && cp -R zh-cn/ en-us/ build/ img/ schema/ md_json/ deploy-dist/ && mv .htaccess *.html *.xml deploy-dist/
