--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         node-version: 10.x
     - name: Build
       run: |
-        npm install && npm run build && mkdir deploy-dist && cp -R zh-cn/ en-us/ build/ img/ schema/ md_json/ deploy-dist/ && mv .htaccess *.html *.xml deploy-dist/
+        npm install && npm run build && mkdir deploy-dist && cp -R zh-cn/ en-us/ build/ img/ schema/ md_json/ documentations/ deploy-dist/ && mv .htaccess *.html *.xml deploy-dist/
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v2.4.0
       env:
