--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,34 +13,19 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
-      - run: |
-          pip install \
-            mkdocs-material \
-            mkdocs-minify-plugin>=0.3 \
-            mkdocs-redirects>=1.0
-      - run: mkdocs build -f mkdocs-en.yml -d ./output/en-us
-        cp -R images ./output/en-us
-        mkdocs build -f mkdocs_zh.yml -d ./output/zh_cn
-        cp -R images $(OUTDIR)/zh_cn
-
-jobs:
-  Build-Deploy:
-    runs-on: ubuntu-18.04
-    steps:
-    - uses: actions/checkout@master
-
-    - name: Use Node.js 10.x
-      uses: actions/setup-node@v1
-      with:
-        node-version: 10.x
-    - name: Build
-      run: |
-        npm install && npm run build && mkdir deploy-dist && cp -R zh-cn/ en-us/ build/ img/ schema/ md_json/ documentations/ deploy-dist/ && mv .htaccess *.html *.xml deploy-dist/
-    - name: Deploy
-      uses: peaceiris/actions-gh-pages@v2.4.0
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        PUBLISH_BRANCH: asf-site
-        PUBLISH_DIR: ./deploy-dist
-      with:
-        keepFiles: true
+      - name: Build
+        - run: |
+              pip install \
+                  mkdocs-material>=5.3.2 \
+                  mkdocs-minify-plugin>=0.3 \
+                  mkdocs-redirects>=1.0
+              mkdocs build -f mkdocs-en.yml -d ./output/en-us && mkdocs build -f mkdocs_zh.yml -d ./output/zh-cn
+        - run: mkdir deploy-dist && cp -R img ./output/zh-cn/ && cp -R img ./output/en-us/ && cp -R ./output/* deploy-dist/
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v2.4.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PUBLISH_BRANCH: asf-site
+          PUBLISH_DIR: ./deploy-dist
+        with:
+          keepFiles: true
