--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,11 +16,11 @@ jobs:
       - name: Build
         - run: |
               pip install \
-                  mkdocs-material>=5.3.2 \
+                  mkdocs-material \
                   mkdocs-minify-plugin>=0.3 \
                   mkdocs-redirects>=1.0
               mkdocs build -f mkdocs-en.yml -d ./output/en-us && mkdocs build -f mkdocs_zh.yml -d ./output/zh-cn
-        - run: mkdir deploy-dist && cp -R img ./output/zh-cn/ && cp -R img ./output/en-us/ && cp -R ./output/* deploy-dist/
+              mkdir deploy-dist && cp -R img ./output/zh-cn/ && cp -R img ./output/en-us/ && cp -R ./output/* deploy-dist/
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v2.4.0
         env:
