--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,13 +14,13 @@ jobs:
         with:
           python-version: 3.x
       - name: Build
-        - run: |
-              pip install \
-                  mkdocs-material \
-                  mkdocs-minify-plugin>=0.3 \
-                  mkdocs-redirects>=1.0
-              mkdocs build -f mkdocs-en.yml -d ./output/en-us && mkdocs build -f mkdocs_zh.yml -d ./output/zh-cn
-              mkdir deploy-dist && cp -R img ./output/zh-cn/ && cp -R img ./output/en-us/ && cp -R ./output/* deploy-dist/
+        run: |
+          pip install \
+              mkdocs-material \
+              mkdocs-minify-plugin>=0.3 \
+              mkdocs-redirects>=1.0
+          mkdocs build -f mkdocs-en.yml -d ./output/en-us && mkdocs build -f mkdocs_zh.yml -d ./output/zh-cn
+          mkdir deploy-dist && cp -R img ./output/zh-cn/ && cp -R img ./output/en-us/ && cp -R ./output/* deploy-dist/
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v2.4.0
         env:
