polish code config

--- a/mkdocs_en.yml
+++ b/mkdocs_en.yml
@@ -1,8 +1,8 @@
 site_name: Apache Dubbo
 repo_url: https://github.com/apache/dubbo-website/
-edit_uri: edit/master/documentations/2.7/en-us/docs/
+edit_uri: edit/master/en-us/
 site_description: >-
-  Apache Dubbo™ is a Microservices Framework，它提供高性能 RPC 通信、服务发现、流量管理等服务治理能力，为你提供构建大规模微服务集群所需的全套解决方案。
+  Apache Dubbo™ is a Microservices Framework。
 docs_dir: 'en-us'
 
 nav:
