--- a/mkdocs_zh.yml
+++ b/mkdocs_zh.yml
@@ -1,12 +1,12 @@
-site_name: Dubbo 2.7.8
+site_name: Apache Dubbo
 repo_url: https://github.com/apache/dubbo-website/
-edit_uri: edit/master/documentations/2.7/zh-cn/docs/
+edit_uri: edit/master/zh-cn/
 site_description: >-
   Apache Dubbo™ 是一款微服务框架（Microservices Framework），它提供高性能 RPC 通信、服务发现、流量管理等服务治理能力，为你提供构建大规模微服务集群所需的全套解决方案。
 docs_dir: 'zh-cn'
 nav:
-  - "Home": 'index.md'
-  - "Docs":
+  - "首页": 'index.md'
+  - "文档":
     - "2.7":
       - "用户手册":
           - "入门":
@@ -171,9 +171,9 @@ nav:
                 - "需求": 'docs/3.0/user/preface/background.md'
                 - "架构": 'docs/3.0/user/preface/architecture.md'
                 - "用法": 'docs/3.0/user/preface/usage.md'
-  - "Blog":
+  - "博客":
       - "2019-2020 回顾": 'blog/apache-dubbo-2019-2020.md'
-  - "Developers":
+  - "开发者指南":
       - "开发者指引": 'developers/developers_dev.md'
 # Configuration
 theme:
