fix mkdocs config

--- a/mkdocs_en.yml
+++ b/mkdocs_en.yml
@@ -6,7 +6,7 @@ site_description: >-
 docs_dir: 'en-us'
 
 nav:
-  - "Home": 'docs/index.md'
+  - "Home": 'index.md'
   - "Docs":
     - "2.7":
       - "User's Guide":
@@ -206,7 +206,7 @@ extra:
       link: https://linkedin.com/in/squidfunk/
     - icon: fontawesome/brands/instagram
       link: https://instagram.com/squidfunk
-
+  docs_key: 'Docs'
 # Extensions
 markdown_extensions:
   - markdown.extensions.admonition
