--- a/mkdocs_zh.yml
+++ b/mkdocs_zh.yml
@@ -4,6 +4,7 @@ edit_uri: edit/master/zh-cn/
 site_description: >-
   Apache Dubbo™ 是一款微服务框架（Microservices Framework），它提供高性能 RPC 通信、服务发现、流量管理等服务治理能力，为你提供构建大规模微服务集群所需的全套解决方案。
 docs_dir: 'zh-cn'
+
 nav:
   - "首页": 'index.md'
   - "文档":
@@ -225,7 +226,7 @@ extra:
       link: https://linkedin.com/in/squidfunk/
     - icon: fontawesome/brands/instagram
       link: https://instagram.com/squidfunk
-
+  docs_key: '文档'
 # Extensions
 markdown_extensions:
   - markdown.extensions.admonition
