customize search config

--- a/mkdocs_en.yml
+++ b/mkdocs_en.yml
@@ -175,6 +175,7 @@ theme:
   language: en
   features:
     - tabs
+    - search.highlight
     #- instant
   palette:
     scheme: default
@@ -190,7 +191,9 @@ theme:
 # Plugins
 plugins:
   - search
-
+    prebuild_index: true
+    separator: '[\s\-\.]+'
+    include_search_page: true
 # Customization
 extra:
   social:
