--- a/mkdocs_zh.yml
+++ b/mkdocs_zh.yml
@@ -193,6 +193,7 @@ theme:
   language: zh
   features:
     - tabs
+    - search.highlight
     #- instant
   palette:
     scheme: default
@@ -208,6 +209,11 @@ theme:
 # Plugins
 plugins:
   - search
+    prebuild_index: true
+    separator: '[\s\-\.]+'
+    lang:
+      - ja
+      - zh
   - minify:
       minify_html: true
 
