fix nav and menu

--- a/mkdocs_en.yml
+++ b/mkdocs_en.yml
@@ -11,100 +11,100 @@ nav:
     - "2.7":
       - "User's Guide":
         - "Preface":
-            - "Bakcground": 'docs/2.7/user/user/preface/background.md'
-            - "Requirements": 'docs/2.7/user/user/preface/background.md'
-            - "Architecture": 'docs/2.7/user/user/preface/architecture.md'
-            - "Usage": 'docs/2.7/user/user/preface/usage.md'
-        - "Quick Start": 'docs/2.7/user/user/quick-start.md'
-        - "Dependencies": 'docs/2.7/user/user/dependencies.md'
-        - "Maturity": 'docs/2.7/user/user/maturity.md'
+            - "Bakcground": 'docs/2.7/user/preface/background.md'
+            - "Requirements": 'docs/2.7/user/preface/background.md'
+            - "Architecture": 'docs/2.7/user/preface/architecture.md'
+            - "Usage": 'docs/2.7/user/preface/usage.md'
+        - "Quick Start": 'docs/2.7/user/quick-start.md'
+        - "Dependencies": 'docs/2.7/user/dependencies.md'
+        - "Maturity": 'docs/2.7/user/maturity.md'
         - "Configuration":
-            - "XML Configuration": 'docs/2.7/user/user/configuration/xml.md'
-            - "API Configuration": 'docs/2.7/user/user/configuration/api.md'
-            - "Annotation Configuration": 'docs/2.7/user/user/configuration/annotation.md'
+            - "XML Configuration": 'docs/2.7/user/configuration/xml.md'
+            - "API Configuration": 'docs/2.7/user/configuration/api.md'
+            - "Annotation Configuration": 'docs/2.7/user/configuration/annotation.md'
         - "Demos":
-            - "Check on start": 'docs/2.7/user/user/demos/preflight-check.md'
-            - "Fault tolerance": 'docs/2.7/user/user/demos/fault-tolerent-strategy.md'
-            - "Load balance": 'docs/2.7/user/user/demos/loadbalance.md'
-            - "Thread model": 'docs/2.7/user/user/demos/thread-model.md'
-            - "Connecting certain provider straightly": 'docs/2.7/user/user/demos/explicit-target.md'
-            - "Subscribe only": 'docs/2.7/user/user/demos/subscribe-only.md'
-            - "Register only": 'docs/2.7/user/user/demos/registry-only.md'
-            - "Static service": 'docs/2.7/user/user/demos/static-service.md'
-            - "Multi-protocols": 'docs/2.7/user/user/demos/multi-protocols.md'
-            - "Multi-registries": 'docs/2.7/user/user/demos/multi-registry.md'
-            - "Grouping": 'docs/2.7/user/user/demos/service-group.md'
-            - "Versions": 'docs/2.7/user/user/demos/multi-versions.md'
-            - "Group merger": 'docs/2.7/user/user/demos/group-merger.md'
-            - "Parameter validation": 'docs/2.7/user/user/demos/parameter-validation.md'
-            - "Result cache": 'docs/2.7/user/user/demos/result-cache.md'
-            - "Generic call": 'docs/2.7/user/user/demos/generic-reference.md'
-            - "Generic implementation": 'docs/2.7/user/user/demos/generic-service.md'
-            - "Echo service": 'docs/2.7/user/user/demos/echo-service.md'
-            - "Context": 'docs/2.7/user/user/demos/context.md'
-            - "Attachment": 'docs/2.7/user/user/demos/attachment.md'
-            - "Async call": 'docs/2.7/user/user/demos/async-call.md'
-            - "Local call": 'docs/2.7/user/user/demos/local-call.md'
-            - "Parameter callback": 'docs/2.7/user/user/demos/callback-parameter.md'
-            - "Event callback": 'docs/2.7/user/user/demos/events-notify.md'
-            - "Local stub": 'docs/2.7/user/user/demos/local-stub.md'
-            - "Local mock": 'docs/2.7/user/user/demos/local-mock.md'
-            - "Delay publish": 'docs/2.7/user/user/demos/delay-publish.md'
-            - "Concurrency limit": 'docs/2.7/user/user/demos/concurrency-control.md'
-            - "Connection limit": 'docs/2.7/user/user/demos/config-connection.md'
-            - "Lazy connec": 'docs/2.7/user/user/demos/lazy-connect.md'
-            - "Stickness connection": 'docs/2.7/user/user/demos/stickiness.md'
-            - "Token authorization": 'docs/2.7/user/user/demos/token-authorization.md'
-            - "Routing rule": 'docs/2.7/user/user/demos/routing-rule.md'
-            - "Config rule": 'docs/2.7/user/user/demos/config-rule.md'
-            - "Service downgrade": 'docs/2.7/user/user/demos/service-downgrade.md'
-            - "Graceful shutdown": 'docs/2.7/user/user/demos/graceful-shutdown.md'
-            - "Host binding": 'docs/2.7/user/user/demos/hostname-binding.md'
-            - "Logger": 'docs/2.7/user/user/demos/logger-strategy.md'
-            - "Accesslog": 'docs/2.7/user/user/demos/accesslog.md'
-            - "Container": 'docs/2.7/user/user/demos/service-container.md'
-            - "Transaction": 'docs/2.7/user/user/demos/distributed-transaction.md'
-            - "Thread dump": 'docs/2.7/user/user/demos/dump.md'
-            - "Netty4": 'docs/2.7/user/user/demos/netty4.md'
-            - "Kryo&FST serialization": 'docs/2.7/user/user/demos/serialization.md'
-            - "Simplified registry URL": 'docs/2.7/user/user/demos/simplify-registry-data.md'
-            - "API reference": 'docs/2.7/user/user/demos/api.md'
+            - "Check on start": 'docs/2.7/user/demos/preflight-check.md'
+            - "Fault tolerance": 'docs/2.7/user/demos/fault-tolerent-strategy.md'
+            - "Load balance": 'docs/2.7/user/demos/loadbalance.md'
+            - "Thread model": 'docs/2.7/user/demos/thread-model.md'
+            - "Connecting certain provider straightly": 'docs/2.7/user/demos/explicit-target.md'
+            - "Subscribe only": 'docs/2.7/user/demos/subscribe-only.md'
+            - "Register only": 'docs/2.7/user/demos/registry-only.md'
+            - "Static service": 'docs/2.7/user/demos/static-service.md'
+            - "Multi-protocols": 'docs/2.7/user/demos/multi-protocols.md'
+            - "Multi-registries": 'docs/2.7/user/demos/multi-registry.md'
+            - "Grouping": 'docs/2.7/user/demos/service-group.md'
+            - "Versions": 'docs/2.7/user/demos/multi-versions.md'
+            - "Group merger": 'docs/2.7/user/demos/group-merger.md'
+            - "Parameter validation": 'docs/2.7/user/demos/parameter-validation.md'
+            - "Result cache": 'docs/2.7/user/demos/result-cache.md'
+            - "Generic call": 'docs/2.7/user/demos/generic-reference.md'
+            - "Generic implementation": 'docs/2.7/user/demos/generic-service.md'
+            - "Echo service": 'docs/2.7/user/demos/echo-service.md'
+            - "Context": 'docs/2.7/user/demos/context.md'
+            - "Attachment": 'docs/2.7/user/demos/attachment.md'
+            - "Async call": 'docs/2.7/user/demos/async-call.md'
+            - "Local call": 'docs/2.7/user/demos/local-call.md'
+            - "Parameter callback": 'docs/2.7/user/demos/callback-parameter.md'
+            - "Event callback": 'docs/2.7/user/demos/events-notify.md'
+            - "Local stub": 'docs/2.7/user/demos/local-stub.md'
+            - "Local mock": 'docs/2.7/user/demos/local-mock.md'
+            - "Delay publish": 'docs/2.7/user/demos/delay-publish.md'
+            - "Concurrency limit": 'docs/2.7/user/demos/concurrency-control.md'
+            - "Connection limit": 'docs/2.7/user/demos/config-connection.md'
+            - "Lazy connec": 'docs/2.7/user/demos/lazy-connect.md'
+            - "Stickness connection": 'docs/2.7/user/demos/stickiness.md'
+            - "Token authorization": 'docs/2.7/user/demos/token-authorization.md'
+            - "Routing rule": 'docs/2.7/user/demos/routing-rule.md'
+            - "Config rule": 'docs/2.7/user/demos/config-rule.md'
+            - "Service downgrade": 'docs/2.7/user/demos/service-downgrade.md'
+            - "Graceful shutdown": 'docs/2.7/user/demos/graceful-shutdown.md'
+            - "Host binding": 'docs/2.7/user/demos/hostname-binding.md'
+            - "Logger": 'docs/2.7/user/demos/logger-strategy.md'
+            - "Accesslog": 'docs/2.7/user/demos/accesslog.md'
+            - "Container": 'docs/2.7/user/demos/service-container.md'
+            - "Transaction": 'docs/2.7/user/demos/distributed-transaction.md'
+            - "Thread dump": 'docs/2.7/user/demos/dump.md'
+            - "Netty4": 'docs/2.7/user/demos/netty4.md'
+            - "Kryo&FST serialization": 'docs/2.7/user/demos/serialization.md'
+            - "Simplified registry URL": 'docs/2.7/user/demos/simplify-registry-data.md'
+            - "API reference": 'docs/2.7/user/demos/api.md'
         - "Schema reference":
-            - "dubbo:service": 'docs/2.7/user/user/references/xml/dubbo-service.md'
-            - "dubbo:reference": 'docs/2.7/user/user/references/xml/dubbo-reference.md'
-            - "dubbo:protocol": 'docs/2.7/user/user/references/xml/dubbo-protocol.md'
-            - "dubbo:registry": 'docs/2.7/user/user/references/xml/dubbo-registry.md'
-            - "dubbo:monitor": 'docs/2.7/user/user/references/xml/dubbo-monitor.md'
-            - "dubbo:application": 'docs/2.7/user/user/references/xml/dubbo-application.md'
-            - "dubbo:module": 'docs/2.7/user/user/references/xml/dubbo-module.md'
-            - "dubbo:provider": 'docs/2.7/user/user/references/xml/dubbo-provider.md'
-            - "dubbo:consumer": 'docs/2.7/user/user/references/xml/dubbo-consumer.md'
-            - "dubbo:method": 'docs/2.7/user/user/references/xml/dubbo-method.md'
-            - "dubbo:argument": 'docs/2.7/user/user/references/xml/dubbo-argument.md'
-            - "dubbo:parameter": 'docs/2.7/user/user/references/xml/dubbo-parameter.md'
-            - "dubbo:config-center": 'docs/2.7/user/user/references/xml/dubbo-config-center.md'
+            - "dubbo:service": 'docs/2.7/user/references/xml/dubbo-service.md'
+            - "dubbo:reference": 'docs/2.7/user/references/xml/dubbo-reference.md'
+            - "dubbo:protocol": 'docs/2.7/user/references/xml/dubbo-protocol.md'
+            - "dubbo:registry": 'docs/2.7/user/references/xml/dubbo-registry.md'
+            - "dubbo:monitor": 'docs/2.7/user/references/xml/dubbo-monitor.md'
+            - "dubbo:application": 'docs/2.7/user/references/xml/dubbo-application.md'
+            - "dubbo:module": 'docs/2.7/user/references/xml/dubbo-module.md'
+            - "dubbo:provider": 'docs/2.7/user/references/xml/dubbo-provider.md'
+            - "dubbo:consumer": 'docs/2.7/user/references/xml/dubbo-consumer.md'
+            - "dubbo:method": 'docs/2.7/user/references/xml/dubbo-method.md'
+            - "dubbo:argument": 'docs/2.7/user/references/xml/dubbo-argument.md'
+            - "dubbo:parameter": 'docs/2.7/user/references/xml/dubbo-parameter.md'
+            - "dubbo:config-center": 'docs/2.7/user/references/xml/dubbo-config-center.md'
         - "Protocol reference":
-            - "dubbo://": 'docs/2.7/user/user/references/protocol/dubbo.md'
-            - "rmi://": 'docs/2.7/user/user/references/protocol/rmi.md'
-            - "hessian://": 'docs/2.7/user/user/references/protocol/hessian.md'
-            - "http://": 'docs/2.7/user/user/references/protocol/http.md'
-            - "thrift://": 'docs/2.7/user/user/references/protocol/thrift.md'
-            - "rest://": 'docs/2.7/user/user/references/protocol/rest.md'
+            - "dubbo://": 'docs/2.7/user/references/protocol/dubbo.md'
+            - "rmi://": 'docs/2.7/user/references/protocol/rmi.md'
+            - "hessian://": 'docs/2.7/user/references/protocol/hessian.md'
+            - "http://": 'docs/2.7/user/references/protocol/http.md'
+            - "thrift://": 'docs/2.7/user/references/protocol/thrift.md'
+            - "rest://": 'docs/2.7/user/references/protocol/rest.md'
         - "Registry reference":
-            - "Multicast": 'docs/2.7/user/user/references/registry/multicast.md'
-            - "Zookeeper": 'docs/2.7/user/user/references/registry/zookeeper.md'
-            - "Redis": 'docs/2.7/user/user/references/registry/redis.md'
-            - "Simple": 'docs/2.7/user/user/references/registry/simple.md'
+            - "Multicast": 'docs/2.7/user/references/registry/multicast.md'
+            - "Zookeeper": 'docs/2.7/user/references/registry/zookeeper.md'
+            - "Redis": 'docs/2.7/user/references/registry/redis.md'
+            - "Simple": 'docs/2.7/user/references/registry/simple.md'
         - "Metadata reference":
-            - "Redis": 'docs/2.7/user/user/references/metadata/metadata-redis.md'
-            - "Zookeeper": 'docs/2.7/user/user/references/registry/metadata-zookeeper.md'
-        - "Telnet reference": 'docs/2.7/user/user/references/telnet.md'
-        - "Maven plugin reference": 'docs/2.7/user/user/references/maven.md'
-        - "Best practice": 'docs/2.7/user/user/best-practice.md'
-        - "Recommendation": 'docs/2.7/user/user/recommend.md'
-        - "Capacity plan": 'docs/2.7/user/user/capacity-plan.md'
-        - "Benchmark": 'docs/2.7/user/user/perf-test.md'
-        - "Code coverange": 'docs/2.7/user/user/covergence.md'
+            - "Redis": 'docs/2.7/user/references/metadata/metadata-redis.md'
+            - "Zookeeper": 'docs/2.7/user/references/registry/metadata-zookeeper.md'
+        - "Telnet reference": 'docs/2.7/user/references/telnet.md'
+        - "Maven plugin reference": 'docs/2.7/user/references/maven.md'
+        - "Best practice": 'docs/2.7/user/best-practice.md'
+        - "Recommendation": 'docs/2.7/user/recommend.md'
+        - "Capacity plan": 'docs/2.7/user/capacity-plan.md'
+        - "Benchmark": 'docs/2.7/user/perf-test.md'
+        - "Code coverange": 'docs/2.7/user/covergence.md'
       - "Developer's Guide":
         - "How to Build": 'dev/build.md'
         - "Architecture": 'dev/design.md'
@@ -190,10 +190,10 @@ theme:
 
 # Plugins
 plugins:
-  - search
-    prebuild_index: true
-    separator: '[\s\-\.]+'
-    include_search_page: true
+  - search:
+      prebuild_index: true
+      separator: '[\s\-\.]+'
+      include_search_page: true
 # Customization
 extra:
   social:
