--- a/mkdocs_zh.yml
+++ b/mkdocs_zh.yml
@@ -208,12 +208,10 @@ theme:
 
 # Plugins
 plugins:
-  - search
-    prebuild_index: true
-    separator: '[\s\-\.]+'
-    lang:
-      - ja
-      - zh
+  - search:
+      separator: '[\s\-\.]+'
+      lang:
+        - ja
   - minify:
       minify_html: true
 
