--- a/mkdocs_en.yml
+++ b/mkdocs_en.yml
@@ -1,6 +1,6 @@
 site_name: Apache Dubbo
-repo_url: https://github.com/apache/dubbo-website/
-edit_uri: edit/master/en-us/
+repo_url: https://github.com/apache/dubbo/
+edit_uri: https://github.com/apache/dubbo-website/edit/master/en-us/
 site_description: >-
   Apache Dubbo™ is a Microservices Framework。
 docs_dir: 'en-us'
@@ -210,6 +210,8 @@ extra:
     - icon: fontawesome/brands/instagram
       link: https://instagram.com/squidfunk
   docs_key: 'Docs'
+extra_css:
+  - css/dropdown.css
 # Extensions
 markdown_extensions:
   - markdown.extensions.admonition
