--- a/mkdocs_zh.yml
+++ b/mkdocs_zh.yml
@@ -1,6 +1,6 @@
 site_name: Apache Dubbo
-repo_url: https://github.com/apache/dubbo-website/
-edit_uri: edit/master/zh-cn/
+repo_url: https://github.com/apache/dubbo/
+edit_uri: https://github.com/apache/dubbo-website/edit/master/zh-cn/
 site_description: >-
   Apache Dubbo™ 是一款微服务框架（Microservices Framework），它提供高性能 RPC 通信、服务发现、流量管理等服务治理能力，为你提供构建大规模微服务集群所需的全套解决方案。
 docs_dir: 'zh-cn'
