clear output files before build

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,7 @@ jobs:
               mkdocs-minify-plugin>=0.3 \
               mkdocs-redirects>=1.0
           mkdocs --version
+          echo "removing previous static files from ./output" && rm -rf ./output
           mkdocs build -f mkdocs_en.yml -d ./output/en-us && mkdocs build -f mkdocs_zh.yml -d ./output/zh-cn
           mkdir deploy-dist && cp -R img ./output/zh-cn/ && cp -R img ./output/en-us/ && cp -R ./output/* deploy-dist/
       - name: Deploy
