--- a/mkdocs_zh.yml
+++ b/mkdocs_zh.yml
@@ -199,9 +199,7 @@ theme:
     scheme: default
     primary: indigo
     accent: indigo
-  font:
-    text: Roboto
-    code: Roboto Mono
+  font: false
   favicon: assets/favicon.png
   icon:
     logo: logo
