update zh home page

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Build
         run: |
           pip install \
-              mkdocs-material>5.5.3 \
+              mkdocs-material>=5.5.3 \
               mkdocs-minify-plugin>=0.3 \
               mkdocs-redirects>=1.0
           mkdocs --version
