--- a/mkdocs_en.yml
+++ b/mkdocs_en.yml
@@ -106,58 +106,93 @@ nav:
         - "Benchmark": 'docs/2.7/user/perf-test.md'
         - "Code coverange": 'docs/2.7/user/covergence.md'
       - "Developer's Guide":
-        - "How to Build": 'dev/build.md'
-        - "Architecture": 'dev/design.md'
-        - "How SPI Works": 'dev/SPI.md'
-        - "Init, Process, Protocols": 'dev/implementation.md'
+        - "How to Build": 'docs/2.7/dev/build.md'
+        - "Architecture": 'docs/2.7/dev/design.md'
+        - "How SPI Works": 'docs/2.7/dev/SPI.md'
+        - "Init, Process, Protocols": 'docs/2.7/dev/implementation.md'
         - "SPI Extensions":
-          - "Protocol": 'dev/impls/protocol.md'
-          - "Filter": 'dev/impls/filter.md'
-          - "Invoker Listener": 'dev/impls/invoker-listener.md'
-          - "Exporter Listener": 'dev/impls/exporter-listener.md'
-          - "Cluster": 'dev/impls/cluster.md'
-          - "Router": 'dev/impls/router.md'
-          - "Load Balance": 'dev/impls/load-balance.md'
-          - "Merge": 'dev/impls/merger.md'
-          - "Registry": 'dev/impls/registry.md'
-          - "Monitor": 'dev/impls/monitor.md'
-          - "Extension Factory": 'dev/impls/extension-factory.md'
-          - "Proxy Factory": 'dev/impls/proxy-factory.md'
-          - "Compiler": 'dev/impls/compiler.md'
-          - "Dispatcher": 'dev/impls/dispatcher.md'
-          - "Threadpool": 'dev/impls/threadpool.md'
-          - "Serialize": 'dev/impls/serialize.md'
-          - "Remoting": 'dev/impls/remoting.md'
-          - "Exchanger": 'dev/impls/exchanger.md'
-          - "Networker": 'dev/impls/networker.md'
-          - "Telnet Handler": 'dev/impls/telnet-handler.md'
-          - "Status Checker": 'dev/impls/status-checker.md'
-          - "Container": 'dev/impls/container.md'
-          - "Page": 'dev/impls/page.md'
-          - "Cache": 'dev/impls/cache.md'
-          - "Validation": 'dev/impls/validation.md'
-          - "Logger Adapter": 'dev/impls/logger-adapter.md'
-        - "Contract": 'dev/contract.md'
-        - "Coding": 'dev/coding.md'
-        - "Release": 'dev/release.md'
-        - "Contribution": 'dev/contribution.md'
-        - "Checklist": 'dev/checklist.md'
-        - "Code Smell": 'dev/code-smell.md'
-        - "TCK": 'dev/TCK.md'
+          - "Protocol": 'docs/2.7/dev/impls/protocol.md'
+          - "Filter": 'docs/2.7/dev/impls/filter.md'
+          - "Invoker Listener": 'docs/2.7/dev/impls/invoker-listener.md'
+          - "Exporter Listener": 'docs/2.7/dev/impls/exporter-listener.md'
+          - "Cluster": 'docs/2.7/dev/impls/cluster.md'
+          - "Router": 'docs/2.7/dev/impls/router.md'
+          - "Load Balance": 'docs/2.7/dev/impls/load-balance.md'
+          - "Merge": 'docs/2.7/dev/impls/merger.md'
+          - "Registry": 'docs/2.7/dev/impls/registry.md'
+          - "Monitor": 'docs/2.7/dev/impls/monitor.md'
+          - "Extension Factory": 'docs/2.7/dev/impls/extension-factory.md'
+          - "Proxy Factory": 'docs/2.7/dev/impls/proxy-factory.md'
+          - "Compiler": 'docs/2.7/dev/impls/compiler.md'
+          - "Dispatcher": 'docs/2.7/dev/impls/dispatcher.md'
+          - "Threadpool": 'docs/2.7/dev/impls/threadpool.md'
+          - "Serialize": 'docs/2.7/dev/impls/serialize.md'
+          - "Remoting": 'docs/2.7/dev/impls/remoting.md'
+          - "Exchanger": 'docs/2.7/dev/impls/exchanger.md'
+          - "Networker": 'docs/2.7/dev/impls/networker.md'
+          - "Telnet Handler": 'docs/2.7/dev/impls/telnet-handler.md'
+          - "Status Checker": 'docs/2.7/dev/impls/status-checker.md'
+          - "Container": 'docs/2.7/dev/impls/container.md'
+          - "Page": 'docs/2.7/dev/impls/page.md'
+          - "Cache": 'docs/2.7/dev/impls/cache.md'
+          - "Validation": 'docs/2.7/dev/impls/validation.md'
+          - "Logger Adapter": 'docs/2.7/dev/impls/logger-adapter.md'
+        - "Contract": 'docs/2.7/dev/contract.md'
+        - "Coding": 'docs/2.7/dev/coding.md'
+        - "Release": 'docs/2.7/dev/release.md'
+        - "Contribution": 'docs/2.7/dev/contribution.md'
+        - "Checklist": 'docs/2.7/dev/checklist.md'
+        - "Code Smell": 'docs/2.7/dev/code-smell.md'
+        - "TCK": 'docs/2.7/dev/TCK.md'
       - "Admin's Guide":
-        - "Dubbo Admin Overview": 'admin/introduction.md'
-        - "Search & Details": 'admin/serviceSearch.md'
-        - "Governance": 'admin/serviceGovernance.md'
-        - "Testing": 'admin/serviceTest.md'
+        - "Dubbo Admin Overview": 'docs/2.7/admin/introduction.md'
+        - "Search & Details": 'docs/2.7/admin/serviceSearch.md'
+        - "Governance": 'docs/2.7/admin/serviceGovernance.md'
+        - "Testing": 'docs/2.7/admin/serviceTest.md'
     - "3.0":
         - "User's Guide":
             - "Preface":
                 - "Bakcground": 'docs/3.0/user/preface/background.md'
   - "Blog":
-      - "2019-2020 回顾": 'blog/apache-dubbo-2019-2020.md'
+      - "2019-2020": 'blog/apache-dubbo-2019-2020.md'
+      - "Dubbo Admin service test": 'blog/service-test.md'
+      - "Implementation background and practice of Dubbo server asynchronous interface": 'blog/dubboAsync_server.md'
+      - "Implementation background and practice of Dubbo client asynchronous interface": 'blog/dubboAsync_client.md'
+      - "How to use Fescar to ensure consistency between Dubbo Microservices": 'blog/dubbo-fescar.md'
+      - "Prepare an Apache Release": 'blog/prepare-an-apache-release.md'
+      - "Dubbo protocol": 'blog/dubbo-protocol.md'
+      - "Your First Dubbo Demo": 'blog/dubbo-101.md'
+      - "Your First Dubbo filter": 'blog/first-dubbo-filter.md'
+      - "Using Zookeeper in Dubbo": 'blog/dubbo-zk.md'
+      - "Using annotation in Dubbo": 'blog/dubbo-annotation.md'
+      - "Introduction to Dubbo spi": 'blog/introduction-to-dubbo-spi.md'
+      - "Source code analysis of spring-boot+Dubbo App start and stop": 'blog/spring-boot-dubbo-start-stop-analysis.md'
+      - "Dubbo extensible mechanism source code analysis": 'blog/introduction-to-dubbo-spi-2.md'
+      - "Manipulating Services Dynamically via QoS": 'blog/introduction-to-dubbo-qos.md'
+      - "Dubbo Loadbalance": 'blog/dubbo-loadbalance.md'
+      - "Sentinel: The flow sentinel of Dubbo service": 'blog/sentinel-introduction-for-dubbo.md'
+      - "Tracking with Pinpoint": 'blog/pinpoint.md'
   - "Developers":
-      - "开发者指引": 'developers/developers_dev.md'
-
+      - "User Guide":
+        - "faq": 'developers/user-guide/faq_dev.md'
+      - "Contributor Guide":
+          - "New contributor guide": 'developers/contributor-guide/new-contributor-guide_dev.md'
+          - "Software donation guide": 'developers/contributor-guide/software-donation-guide_dev.md'
+          - "Test coverage guide": 'developers/contributor-guide/test-coverage-guide_dev.md'
+          - "Mailing list subscription guide": 'developers/contributor-guide/mailing-list-subscription-guide_dev.md'
+          - "CLA Signing Guide": 'developers/contributor-guide/cla-signing-guide_dev.md'
+          - "Extension guide": 'developers/contributor-guide/dubbo-extension-guide_dev.md'
+          - "How to become a committer": 'developers/contributor-guide/become-a-committer_dev.md'
+          - "How to report security issues": 'developers/reporting-security-issues_dev.md'
+      - "Committer Guide":
+          - "New Committer guide": 'developers/committer-guide/new-committer-guide_dev.md'
+          - "Label an Issue": 'developers/Label an Issue.md'
+          - "Website Guide": 'developers/committer-guide/website-guide_dev.md'
+          - "Apache Dubbo Page Maintenance": 'developers/committer-guide/apache-dubbo-page_dev.md'
+          - "Release Guide": 'developers/committer-guide/release-guide_dev.md'
+      - "How to contribute": 'developers/guide_dev.md'
+      - "Developers": 'developers/developers_dev.md'
+  - "Downloads": "blog/downloads.md"
 # Configuration
 theme:
   name: null
