--- a/mkdocs_zh.yml
+++ b/mkdocs_zh.yml
@@ -172,10 +172,46 @@ nav:
                 - "需求": 'docs/3.0/user/preface/background.md'
                 - "架构": 'docs/3.0/user/preface/architecture.md'
                 - "用法": 'docs/3.0/user/preface/usage.md'
-  - "博客":
-      - "2019-2020 回顾": 'blog/apache-dubbo-2019-2020.md'
-  - "开发者指南":
-      - "开发者指引": 'developers/developers_dev.md'
+  - "Blog":
+      - "2019-2020": 'blog/apache-dubbo-2019-2020.md'
+      - "服务测试": 'blog/service-test.md'
+      - "Implementation background and practice of Dubbo server asynchronous interface": 'blog/dubboAsync_server.md'
+      - "Implementation background and practice of Dubbo client asynchronous interface": 'blog/dubboAsync_client.md'
+      - "How to use Fescar to ensure consistency between Dubbo Microservices": 'blog/dubbo-fescar.md'
+      - "Prepare an Apache Release": 'blog/prepare-an-apache-release.md'
+      - "Dubbo protocol": 'blog/dubbo-protocol.md'
+      - "Your First Dubbo Demo": 'blog/dubbo-101.md'
+      - "Your First Dubbo filter": 'blog/first-dubbo-filter.md'
+      - "Using Zookeeper in Dubbo": 'blog/dubbo-zk.md'
+      - "Using annotation in Dubbo": 'blog/dubbo-annotation.md'
+      - "Introduction to Dubbo spi": 'blog/introduction-to-dubbo-spi.md'
+      - "Source code analysis of spring-boot+Dubbo App start and stop": 'blog/spring-boot-dubbo-start-stop-analysis.md'
+      - "Dubbo extensible mechanism source code analysis": 'blog/introduction-to-dubbo-spi-2.md'
+      - "Manipulating Services Dynamically via QoS": 'blog/introduction-to-dubbo-qos.md'
+      - "Dubbo Loadbalance": 'blog/dubbo-loadbalance.md'
+      - "Sentinel: The flow sentinel of Dubbo service": 'blog/sentinel-introduction-for-dubbo.md'
+      - "Tracking with Pinpoint": 'blog/pinpoint.md'
+  - "Developers":
+      - "User Guide":
+          - "faq": 'developers/user-guide/faq_dev.md'
+      - "Contributor Guide":
+          - "New contributor guide": 'developers/contributor-guide/new-contributor-guide_dev.md'
+          - "Software donation guide": 'developers/contributor-guide/software-donation-guide_dev.md'
+          - "Test coverage guide": 'developers/contributor-guide/test-coverage-guide_dev.md'
+          - "Mailing list subscription guide": 'developers/contributor-guide/mailing-list-subscription-guide_dev.md'
+          - "CLA Signing Guide": 'developers/contributor-guide/cla-signing-guide_dev.md'
+          - "Extension guide": 'developers/contributor-guide/dubbo-extension-guide_dev.md'
+          - "How to become a committer": 'developers/contributor-guide/become-a-committer_dev.md'
+          - "How to report security issues": 'developers/reporting-security-issues_dev.md'
+      - "Committer Guide":
+          - "New Committer guide": 'developers/committer-guide/new-committer-guide_dev.md'
+          - "Label an Issue": 'developers/Label an Issue.md'
+          - "Website Guide": 'developers/committer-guide/website-guide_dev.md'
+          - "Apache Dubbo Page Maintenance": 'developers/committer-guide/apache-dubbo-page_dev.md'
+          - "Release Guide": 'developers/committer-guide/release-guide_dev.md'
+      - "How to contribute": 'developers/guide_dev.md'
+      - "Developers": 'developers/developers_dev.md'
+  - "Downloads": "blog/downloads.md"
 # Configuration
 theme:
   name: null
