update home page

--- a/mkdocs_en.yml
+++ b/mkdocs_en.yml
@@ -5,6 +5,8 @@ site_description: >-
   Apache Dubbo™ is a Microservices Framework。
 docs_dir: 'en-us'
 
+copyright: 'Copyright © 2018-2020 The Apache Software Foundation. Apache and the Apache feather logo are trademarks of The Apache Software Foundation.'
+
 nav:
   - "Home": 'index.md'
   - "Docs":
@@ -192,7 +194,8 @@ nav:
           - "Release Guide": 'developers/committer-guide/release-guide_dev.md'
       - "How to contribute": 'developers/guide_dev.md'
       - "Developers": 'developers/developers_dev.md'
-  - "Downloads": "blog/downloads.md"
+  - "Downloads":
+      - "Releases": "blog/downloads.md"
 # Configuration
 theme:
   name: null
@@ -230,18 +233,15 @@ plugins:
 # Customization
 extra:
   social:
-    - icon: fontawesome/brands/github
-      link: https://github.com/squidfunk
-    - icon: fontawesome/brands/gitter
-      link: https://gitter.im/squidfunk/mkdocs-material
-    - icon: fontawesome/brands/docker
-      link: https://hub.docker.com/r/squidfunk/mkdocs-material/
-    - icon: fontawesome/brands/twitter
-      link: https://twitter.com/squidfunk
-    - icon: fontawesome/brands/linkedin
-      link: https://linkedin.com/in/squidfunk/
-    - icon: fontawesome/brands/instagram
-      link: https://instagram.com/squidfunk
+    - icon: material/apache
+      link: http://www.apache.org
+      name: Fundation
+    - icon: material/license
+      link: http://www.apache.org/licenses/
+    - icon: fontawesome/brands/meetup
+      link: http://www.apache.org/events/current-event
+    - icon: material/flag
+      link: http://www.apache.org/foundation/sponsorship.html
   docs_key: 'Docs'
 extra_css:
   - css/dropdown.css
