--- a/mkdocs_zh.yml
+++ b/mkdocs_zh.yml
@@ -252,18 +252,15 @@ plugins:
 # Customization
 extra:
   social:
-    - icon: fontawesome/brands/github
-      link: https://github.com/squidfunk
-    - icon: fontawesome/brands/gitter
-      link: https://gitter.im/squidfunk/mkdocs-material
-    - icon: fontawesome/brands/docker
-      link: https://hub.docker.com/r/squidfunk/mkdocs-material/
-    - icon: fontawesome/brands/twitter
-      link: https://twitter.com/squidfunk
-    - icon: fontawesome/brands/linkedin
-      link: https://linkedin.com/in/squidfunk/
-    - icon: fontawesome/brands/instagram
-      link: https://instagram.com/squidfunk
+    - icon: material/apache
+      link: http://www.apache.org
+      name: Fundation
+    - icon: material/license
+      link: http://www.apache.org/licenses/
+    - icon: fontawesome/brands/meetup
+      link: http://www.apache.org/events/current-event
+    - icon: material/flag
+      link: http://www.apache.org/foundation/sponsorship.html
   docs_key: '文档'
 # Extensions
 markdown_extensions:
