revert en_us to en-us

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,8 +21,8 @@ jobs:
               mkdocs-redirects>=1.0
           mkdocs --version
           echo "removing previous static files from ./output" && rm -rf ./output
-          mkdocs build -f mkdocs_en.yml -d ./output/en_us && mkdocs build -f mkdocs_zh.yml -d ./output/zh_cn
-          mkdir deploy-dist && cp -R img ./output/zh_cn/ && cp -R img ./output/en_us/ && cp -R ./output/* deploy-dist/
+          mkdocs build -f mkdocs_en.yml -d ./output/en-us && mkdocs build -f mkdocs_zh.yml -d ./output/zh-cn
+          mkdir deploy-dist && cp -R img ./output/zh-cn/ && cp -R img ./output/en-us/ && cp -R ./output/* deploy-dist/
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v2.4.0
         env:
