--- a/mkdocs_en.yml
+++ b/mkdocs_en.yml
@@ -156,14 +156,13 @@ nav:
             - "Preface":
                 - "Bakcground": 'docs/3.0/user/preface/background.md'
   - "Blog":
-      - "2019-2020": 'blog/apache-dubbo-2019-2020.md'
+      - "Your First Dubbo Demo": 'blog/dubbo-101.md'
       - "Dubbo Admin service test": 'blog/service-test.md'
       - "Implementation background and practice of Dubbo server asynchronous interface": 'blog/dubboAsync_server.md'
       - "Implementation background and practice of Dubbo client asynchronous interface": 'blog/dubboAsync_client.md'
       - "How to use Fescar to ensure consistency between Dubbo Microservices": 'blog/dubbo-fescar.md'
       - "Prepare an Apache Release": 'blog/prepare-an-apache-release.md'
       - "Dubbo protocol": 'blog/dubbo-protocol.md'
-      - "Your First Dubbo Demo": 'blog/dubbo-101.md'
       - "Your First Dubbo filter": 'blog/first-dubbo-filter.md'
       - "Using Zookeeper in Dubbo": 'blog/dubbo-zk.md'
       - "Using annotation in Dubbo": 'blog/dubbo-annotation.md'
@@ -175,6 +174,8 @@ nav:
       - "Sentinel: The flow sentinel of Dubbo service": 'blog/sentinel-introduction-for-dubbo.md'
       - "Tracking with Pinpoint": 'blog/pinpoint.md'
   - "Developers":
+      - "How to contribute": 'developers/guide_dev.md'
+      - "Developers": 'developers/developers_dev.md'
       - "User Guide":
         - "faq": 'developers/user-guide/faq_dev.md'
       - "Contributor Guide":
@@ -192,10 +193,8 @@ nav:
           - "Website Guide": 'developers/committer-guide/website-guide_dev.md'
           - "Apache Dubbo Page Maintenance": 'developers/committer-guide/apache-dubbo-page_dev.md'
           - "Release Guide": 'developers/committer-guide/release-guide_dev.md'
-      - "How to contribute": 'developers/guide_dev.md'
-      - "Developers": 'developers/developers_dev.md'
   - "Downloads":
-      - "Releases": "blog/downloads.md"
+      - "Releases": "blog/download.md"
 # Configuration
 theme:
   name: null
