fix home page style

--- a/mkdocs_en.yml
+++ b/mkdocs_en.yml
@@ -72,6 +72,7 @@ nav:
             - "Simplified registry URL": 'docs/2.7/user/demos/simplify-registry-data.md'
             - "API reference": 'docs/2.7/user/demos/api.md'
         - "Schema reference":
+            - "Introduction": 'docs/2.7/user/references/xml/introduction.md'
             - "dubbo:service": 'docs/2.7/user/references/xml/dubbo-service.md'
             - "dubbo:reference": 'docs/2.7/user/references/xml/dubbo-reference.md'
             - "dubbo:protocol": 'docs/2.7/user/references/xml/dubbo-protocol.md'
