--- a/mkdocs_zh.yml
+++ b/mkdocs_zh.yml
@@ -74,6 +74,7 @@ nav:
               - "简化注册中心URL": 'docs/2.7/user/demos/simplify-registry-data.md'
               - "API 参考手册": 'docs/2.7/user/demos/api.md'
           - "schema 配置参考手册":
+              - "简介": 'docs/2.7/user/references/xml/introduction.md'
               - "dubbo:service": 'docs/2.7/user/references/xml/dubbo-service.md'
               - "dubbo:reference": 'docs/2.7/user/references/xml/dubbo-reference.md'
               - "dubbo:protocol": 'docs/2.7/user/references/xml/dubbo-protocol.md'
@@ -242,10 +243,7 @@ theme:
 
 # Plugins
 plugins:
-  - search:
-      separator: '[\s\-\.]+'
-      lang:
-        - ja
+  - search
   - minify:
       minify_html: true
 
