add announce, fix style

--- a/mkdocs_zh.yml
+++ b/mkdocs_zh.yml
@@ -192,10 +192,10 @@ nav:
       - "Dubbo Loadbalance": 'blog/dubbo-loadbalance.md'
       - "Sentinel: The flow sentinel of Dubbo service": 'blog/sentinel-introduction-for-dubbo.md'
       - "Tracking with Pinpoint": 'blog/pinpoint.md'
-  - "Developers":
-      - "User Guide":
+  - "开发者指引":
+      - "使用指南":
           - "faq": 'developers/user-guide/faq_dev.md'
-      - "Contributor Guide":
+      - "贡献者指南":
           - "New contributor guide": 'developers/contributor-guide/new-contributor-guide_dev.md'
           - "Software donation guide": 'developers/contributor-guide/software-donation-guide_dev.md'
           - "Test coverage guide": 'developers/contributor-guide/test-coverage-guide_dev.md'
@@ -204,15 +204,16 @@ nav:
           - "Extension guide": 'developers/contributor-guide/dubbo-extension-guide_dev.md'
           - "How to become a committer": 'developers/contributor-guide/become-a-committer_dev.md'
           - "How to report security issues": 'developers/reporting-security-issues_dev.md'
-      - "Committer Guide":
+      - "提交者指南":
           - "New Committer guide": 'developers/committer-guide/new-committer-guide_dev.md'
           - "Label an Issue": 'developers/Label an Issue.md'
           - "Website Guide": 'developers/committer-guide/website-guide_dev.md'
           - "Apache Dubbo Page Maintenance": 'developers/committer-guide/apache-dubbo-page_dev.md'
           - "Release Guide": 'developers/committer-guide/release-guide_dev.md'
-      - "How to contribute": 'developers/guide_dev.md'
-      - "Developers": 'developers/developers_dev.md'
-  - "Downloads": "blog/downloads.md"
+      - "如何做出贡献": 'developers/guide_dev.md'
+      - "开发者": 'developers/developers_dev.md'
+  - "下载":
+      - "版本列表": "blog/download.md"
 # Configuration
 theme:
   name: null
